--- a/src/pages/home/Home.scss
+++ b/src/pages/home/Home.scss
@@ -1,4 +1,6 @@
 .home{
-    background-color: rebeccapurple;
-    color: white;
+    display: flex;
+    .homeContainer{
+        flex: 6;
+    }
 }
