--- a/src/components/sidebar/sidebar.scss
+++ b/src/components/sidebar/sidebar.scss
@@ -24,7 +24,55 @@
             list-style: none;
             margin: o;
             padding: 0;
+
+            .title{
+                font-size: 0.6rem;
+                font-weight: bold;
+                color: #999;
+                margin-top: 15px;
+                margin-bottom: 5px;
+            }
+            li{
+                display: flex;
+                align-items: center;
+                padding: 5px;
+                cursor: pointer;
+
+                &:hover{
+                    background-color: #ece8ff;
+                }
+                .icon{
+                    font-size: 1.5rem;
+                    color: #7451f8;
+                }
+                span{
+                    font-size: 0.8rem;
+                    font-weight: 600;
+                    color: #888;
+                    margin-left: 10px;
+                }
+            }
         }
     }
-    
+    .bottom{
+        display: flex;
+        align-items: center;
+        margin: 10px;
+
+        .colorOption{
+            width: 20px;
+            height: 20px;
+            border-radius: 5px;
+            border: 1px solid #7451f8 ;
+            cursor: pointer;
+            margin: 5px;
+
+            &:nth-child(1){
+                background-color: whitesmoke;
+            }
+            &:nth-child(2){
+                background-color: #333;
+            }
+        }
+    }
 }
