--- a/src/components/sidebar/sidebar.scss
+++ b/src/components/sidebar/sidebar.scss
@@ -11,7 +11,7 @@
         .logo{
             font-size: 1.2rem;
             font-weight: bold;
-            color: #6439ff;
+            color: #e61111;
         }
     }
     hr{
@@ -43,7 +43,7 @@
                 }
                 .icon{
                     font-size: 1.5rem;
-                    color: #7451f8;
+                    color: #e61111;
                 }
                 span{
                     font-size: 0.8rem;
@@ -63,7 +63,7 @@
             width: 20px;
             height: 20px;
             border-radius: 5px;
-            border: 1px solid #7451f8 ;
+            border: 1px solid #e61111 ;
             cursor: pointer;
             margin: 5px;
 
