--- a/src/pages/single/signle.scss
+++ b/src/pages/single/signle.scss
@@ -21,7 +21,7 @@
                 right: 0;
                 padding: 5px;
                 font-size: 12px;
-                color: #7451f8;
+                color: #e61111;
                 background-color: #7551f818;
                 cursor: pointer;
                 border-radius: 0px 0px 0px 5px;
